# duckdb-rs

./: .gitattributes  .gitignore  .gitmodules  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  README_C_EXT_API_POC.md  add_rustfmt_hook.sh  rust-toolchain.toml  rustfmt.toml  upgrade.sh
.cargo/: config.toml
.github/: .codecov.yml  dependabot.yml
.github/workflows/: HighPriorityIssues.yml  extension-docs.yml  nightly.yaml  release.yaml  rust.yaml
crates/duckdb/: CHANGELOG.md  Cargo.toml
crates/duckdb-loadable-macros/: Cargo.toml
crates/duckdb-loadable-macros/src/: lib.rs
crates/duckdb/benches/issue-282/: generate-database.sh  main.rs  output.csv
crates/duckdb/benches/issue-282/data/: .gitignore
crates/duckdb/examples/: Movies_Social_metadata.xlsx  appender.rs  arrow_vtab.rs  arrow_zerocopy_bench.rs  basic.rs  parquet.rs  repl.rs  vscalar.rs  vtab.rs
crates/duckdb/examples/hello-ext/: main.rs
crates/duckdb/examples/hello-ext-capi/: main.rs
crates/duckdb/src/: appender_params.rs  arrow_batch.rs  arrow_scan.rs  cache.rs  callback.rs  column.rs  config.rs  error.rs  executed_result.rs  extension.rs  inner_connection.rs  lib.rs  panic_utils.rs  params.rs  polars_dataframe.rs  pragma.rs  profiling.rs  r2d2.rs  raw_statement.rs  row.rs  statement.rs  table_index_list_bind_test.rs  test_all_types.rs  transaction.rs
crates/duckdb/src/appender/: arrow.rs  mod.rs
crates/duckdb/src/arrow_interop/: from_duckdb.rs  mod.rs  schema.rs  test_support.rs  tests.rs  to_duckdb.rs
crates/duckdb/src/arrow_interop/tests/: fixed_size_binary.rs  from_duckdb_nested.rs  initialization.rs  mod.rs  nested.rs
crates/duckdb/src/arrow_zerocopy/: filter.rs  mod.rs
crates/duckdb/src/callback/: test_support.rs
crates/duckdb/src/core/: column_info.rs  data_chunk.rs  logical_type.rs  mod.rs  selection_vector.rs  value.rs  vector.rs
crates/duckdb/src/core/vector/: array.rs  flat.rs  lease.rs  list.rs  mod.rs  resize.rs  result_ext.rs  state.rs  struct.rs  tests.rs  writable.rs
crates/duckdb/src/types/: chrono.rs  decimal.rs  from_sql.rs  mod.rs  ndarray.rs  ordered_map.rs  serde_json.rs  serde_struct.rs  string.rs  time_libraries.rs  to_sql.rs  url.rs  value.rs  value_ffi.rs  value_ref.rs
crates/duckdb/src/util/: small_cstr.rs
crates/duckdb/src/vscalar/: arrow.rs  function.rs  mod.rs  tests.rs
crates/duckdb/src/vtab/: arrow.rs  data_chunk.rs  excel.rs  function.rs  logical_type.rs  mod.rs  tests.rs  value.rs  vector.rs
crates/duckdb/src/vtab/arrow/: mod.rs  tests.rs
crates/libduckdb-sys/: Cargo.toml  bindgen.sh  build.rs  build_bundled_cc.rs  build_bundled_cmake.rs  generated_extension_loader.cpp.in  update_sources.py  upgrade.sh  wrapper.h  wrapper_ext.h
crates/libduckdb-sys/openssl/: find_normal.rs  find_vendored.rs  mod.rs  run_bindgen.rs
crates/libduckdb-sys/src/: arrow_c_data.rs  arrow_zerocopy_shim.cpp  bindgen_bundled_version.rs  bindgen_bundled_version_loadable.rs  build_paths.rs  error.rs  lib.rs  string.rs  types.rs
duckdb-loadable-macros/: Cargo.toml
duckdb-loadable-macros/src/: lib.rs
examples/: appender.rs  basic.rs  date.xlsx  parquet.rs
examples/hello-ext/: main.rs
libduckdb-sys/: .gitignore  Cargo.toml  README.md  bindgen.sh  build.rs  update_sources.py  upgrade.sh
libduckdb-sys/duckdb/: bindgen_bundled_version.rs  duckdb.hpp  manifest.json  ub_extension_json_json_functions.cpp  ub_src_catalog.cpp  ub_src_catalog_catalog_entry.cpp  ub_src_catalog_default.cpp  ub_src_common.cpp  ub_src_common_arrow.cpp  ub_src_common_crypto.cpp  ub_src_common_enums.cpp  ub_src_common_operator.cpp  ub_src_common_progress_bar.cpp  ub_src_common_row_operations.cpp  ub_src_common_serializer.cpp  ub_src_common_sort.cpp  ub_src_common_types.cpp  ub_src_common_value_operations.cpp  ub_src_execution.cpp  ub_src_execution_expression_executor.cpp  ub_src_execution_index_art.cpp  ub_src_execution_nested_loop_join.cpp  ub_src_execution_operator_aggregate.cpp  ub_src_execution_operator_filter.cpp  ub_src_execution_operator_helper.cpp  ub_src_execution_operator_join.cpp  ub_src_execution_operator_order.cpp  ub_src_execution_operator_persistent.cpp  ub_src_execution_operator_projection.cpp  ub_src_execution_operator_scan.cpp  ub_src_execution_operator_schema.cpp  ub_src_execution_operator_set.cpp  ub_src_execution_physical_plan.cpp  ub_src_function.cpp  ub_src_function_aggregate.cpp  ub_src_function_aggregate_algebraic.cpp  ub_src_function_aggregate_distributive.cpp  ub_src_function_aggregate_holistic.cpp  ub_src_function_aggregate_nested.cpp  ub_src_function_aggregate_regression.cpp  (+65 more)
libduckdb-sys/duckdb/src/function/table/version/: pragma_version.cpp
libduckdb-sys/openssl/: find_normal.rs  mod.rs  run_bindgen.rs
libduckdb-sys/src/: bindgen_bundled_version.rs  error.rs  lib.rs
src/: appender.rs  appender_params.rs  arrow_batch.rs  cache.rs  column.rs  config.rs  database.rs  error.rs  inner_connection.rs  lib.rs  params.rs  polars_dataframe.rs  pragma.rs  r2d2.rs  raw_statement.rs  row.rs  statement.rs  test_all_types.rs  transaction.rs
src/appender/: arrow.rs  mod.rs
src/table_function/: function.rs  mod.rs
src/types/: chrono.rs  from_sql.rs  mod.rs  serde_json.rs  time.rs  to_sql.rs  url.rs  value.rs  value_ref.rs
src/util/: mod.rs  small_cstr.rs
src/vtab/: arrow.rs  data_chunk.rs  excel.rs  function.rs  logical_type.rs  mod.rs  value.rs  vector.rs
