[workspace]
resolver = "2"
members = [
    "crates/duckdb",
    "crates/libduckdb-sys",
    "crates/duckdb-loadable-macros",
]

[workspace.package]
version = "1.4.1"
authors = ["wangfenjin <wangfenj@gmail.com>"]
repository = "https://github.com/duckdb/duckdb-rs"
homepage = "https://github.com/duckdb/duckdb-rs"
documentation = "http://docs.rs/duckdb/"
readme = "README.md"
keywords = ["duckdb", "database", "ffi"]
license = "MIT"
categories = ["database"]
edition = "2021"
rust-version = "1.84.1"

[workspace.dependencies]
duckdb = { version = "=1.4.1", path = "crates/duckdb" }
duckdb-loadable-macros = { version = "=0.1.11", path = "crates/duckdb-loadable-macros" }
libduckdb-sys = { version = "=1.4.1", path = "crates/libduckdb-sys" }

arrow = { version = "57", default-features = false }
bindgen = { version = "0.72.1", default-features = false }
calamine = "0.31.0"
cast = "0.3"
cc = "1.2"
chrono = { version = "0.4.42", default-features = false, features = [
    "std",
    "clock",
] }
doc-comment = "0.3"
fallible-iterator = "0.3"
fallible-streaming-iterator = "0.1"
flate2 = "1.1"
hashlink = "0.11"
num = { version = "0.4", default-features = false }
num-integer = "0.1.46"
pkg-config = "0.3.32"
polars = "0.52.0"
polars-arrow = "0.52.0"
polars-core = "0.52.0"
pretty_assertions = "1.4.1"
prettyplease = "0.2.37"
proc-macro2 = "1.0.103"
quote = "1.0.41"
r2d2 = "0.8.10"
rand = "0.9.2"
rust_decimal = "1.39"
serde = "1.0"
serde_json = "1.0"
strum = "0.27"
syn = "2.0.108"
tar = "0.4.44"
tempfile = "3.23.0"
url = "2.5"
uuid = "1.18"
vcpkg = "0.2"
