[package]
name = "duckdb-loadable-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = { version = "1.0.56" }
quote = { version = "1.0.21" }
syn = { version = "1.0.95", features = [ "extra-traits", "full", "fold", "parsing" ] }

[lib]
proc-macro = true
