[package]
name = "libduckdb-sys"
version = "1.1.0+libduckdb.1.1.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
build = "build.rs"
categories = ["external-ffi-bindings", "database"]
description = "Native bindings to the libduckdb library, C API"
exclude = ["duckdb-sources"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["vcpkg", "pkg-config"]
bundled = ["cmake"]
buildtime_bindgen = ["bindgen", "pkg-config", "vcpkg"]
parquet = ["bundled"] # ignored
extensions-full = ["autocomplete","httpfs","tpcds","fts","icu", "json","parquet"]
winduckdb = []
autocomplete = ["bundled"]
httpfs = ["bundled"]
tpcds = ["bundled"]
fts = ["bundled"]
icu = ["bundled"]
json = ["bundled"]

[dependencies]

[build-dependencies]
bindgen = { workspace = true, features = ["runtime"], optional = true }
pkg-config = { workspace = true, optional = true }
vcpkg = { workspace = true, optional = true }
cmake = { version = "0.1.51", optional = true }

[dev-dependencies]
arrow = { workspace = true, features = ["ffi"] }
